--- a/.config/sway/config
+++ b/.config/sway/config
@@ -20,17 +20,20 @@ set $term alacritty
 # on the original workspace that the command was run on.
 set $menu wofi --show run
 
+set $display1 DVI-D-1
+set $display2 HDMI-A-1
+
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg ~/wallpapers/neon.png fill
 
-output DVI-D-1 pos 1920 0 res 1920x1080
-output HDMI-A-1 pos 0 0 res 1920x1080
+output $display1 pos 1920 0 res 1920x1080
+output $display2 pos 0 0 res 1920x1080
 #
 # Example configuration:
 #
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
+#   output $display2 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -118,16 +121,16 @@ input "COMPANY  USB Device" {
 #
 # Workspaces:
 #
-    workspace 1 output DVI-D-1
-    workspace 2 output DVI-D-1
-    workspace 3 output DVI-D-1
-    workspace 4 output DVI-D-1
-    workspace 5 output DVI-D-1
-    workspace 6 output DVI-D-1
-    workspace 7 output HDMI-A-1
-    workspace 8 output HDMI-A-1
-    workspace 9 output HDMI-A-1
-    workspace 0 output HDMI-A-1
+    workspace 1 output $display1
+    workspace 2 output $display1
+    workspace 3 output $display1
+    workspace 4 output $display1
+    workspace 5 output $display1
+    workspace 6 output $display1
+    workspace 7 output $display2
+    workspace 8 output $display2
+    workspace 9 output $display2
+    workspace 0 output $display2
     
     # Switch to workspace
     bindsym --to-code $mod+1 workspace number 1
