--- a/.config/sway/config
+++ b/.config/sway/config
@@ -45,7 +45,8 @@ exec swayidle -w \
          timeout 300 'swaylock -f -c 000000' \
          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f -c 000000'
-
+for_window [class="Chromium"] inhibit_idle fullscreen
+    
 ### Input configuration
 
 input * {
