--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,7 +18,7 @@ set $term alacritty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu wofi --show run
+set $menu wofi
 
 set $display1 DVI-D-1
 set $display2 HDMI-A-1
