--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -57,8 +57,7 @@
         "spacing": 10
     },
     "clock": {
-        // "timezone": "America/New_York",
-        "format": "{:%Y-%m-%d %H:%M}",
+        "format": "{:%Y-%m-%d %H:%M:%S}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}",
         "interval": 1
