Change alacritty theme.

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -8,8 +8,8 @@
 #
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
-#import:
-#  - /path/to/alacritty.yml
+import:
+  - ~/.config/alacritty/themes/dracula.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
@@ -183,11 +183,11 @@ font:
 
 # Colors (Tomorrow Night)
 
-colors:
+# colors:
   # Default colors
-  primary:
-    background: '0x1e2127'
-    foreground: '0xabb2bf'
+  # primary:
+  #   background: '0x1e2127'
+  #   foreground: '0xabb2bf'
 
     # Bright and dim foreground colors
     #
@@ -195,7 +195,7 @@ colors:
     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
     # is `false`, the normal foreground color will be used.
     #dim_foreground: '0x9a9a9a'
-    bright_foreground: '0xe6efff'
+    # bright_foreground: '0xe6efff'
 
   # Cursor colors
   #
@@ -206,40 +206,40 @@ colors:
   #  cursor: '0xffffff'
 
   # Normal colors
-  normal:
-    black:   '0x1e2127'
-    red:     '0xe06c75'
-    green:   '0x98c379'
-    yellow:  '0xd19a66'
-    blue:    '0x61afef'
-    magenta: '0xc678dd'
-    cyan:    '0x56b6c2'
-    white:   '0x828791'
+  # normal:
+  #   black:   '0x1e2127'
+  #   red:     '0xe06c75'
+  #   green:   '0x98c379'
+  #   yellow:  '0xd19a66'
+  #   blue:    '0x61afef'
+  #   magenta: '0xc678dd'
+  #   cyan:    '0x56b6c2'
+  #   white:   '0x828791'
 
   # Bright colors
-  bright:
-    black:   '0x5c6370'
-    red:     '0xe06c75'
-    green:   '0x98c379'
-    yellow:  '0xd19a66'
-    blue:    '0x61afef'
-    magenta: '0xc678dd'
-    cyan:    '0x56b6c2'
-    white:   '0xe6efff'
+  # bright:
+  #   black:   '0x5c6370'
+  #   red:     '0xe06c75'
+  #   green:   '0x98c379'
+  #   yellow:  '0xd19a66'
+  #   blue:    '0x61afef'
+  #   magenta: '0xc678dd'
+  #   cyan:    '0x56b6c2'
+  #   white:   '0xe6efff'
 
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
-  dim:
-    black:   '0x1e2127'
-    red:     '0xe06c75'
-    green:   '0x98c379'
-    yellow:  '0xd19a66'
-    blue:    '0x61afef'
-    magenta: '0xc678dd'
-    cyan:    '0x56b6c2'
-    white:   '0x828791'
+  # dim:
+  #   black:   '0x1e2127'
+  #   red:     '0xe06c75'
+  #   green:   '0x98c379'
+  #   yellow:  '0xd19a66'
+  #   blue:    '0x61afef'
+  #   magenta: '0xc678dd'
+  #   cyan:    '0x56b6c2'
+  #   white:   '0x828791'
 
   # Indexed Colors
   #
