--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,7 +14,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term alacritty
+set $term kitty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -253,5 +253,10 @@ bar {
 # Notifications
 #
     exec mako
+
+#
+# Polkit agent
+#
+  exec /usr/bin/polkit-dumb-agent
 
 include /etc/sway/config.d/*
