--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -94,7 +94,7 @@
     // "thermal-zone": 2,
     "hwmon-path": "/sys/class/drm/card0/device/hwmon/hwmon2/temp1_input",
     "critical-threshold": 80,
-    "format-critical": "🔥 {temperatureC}°C",
+    "format-critical": " {temperatureC}°C",
     "format": " {temperatureC}°C",
     "format-icons": [
       "",
