--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,15 +1,13 @@
 {
-  // "layer": "top", // Waybar at top layer
-  // "position": "bottom", // Waybar position (top|bottom|left|right)
-  "height": 30, // Waybar height (to be removed for auto height)
-  // "width": 1280, // Waybar width
-  // Choose the order of the modules
+  //"height": 0, // Waybar height (to be removed for auto height)
+  "width": 1900,
   "modules-left": [
-    "sway/workspaces",
-    "sway/mode",
-    "custom/media"
+    "custom/icon",
+    "sway/workspaces"
   ],
-  // "modules-center": [],
+  "modules-center": [
+    "clock"
+  ],
   "modules-right": [
     "custom/bitcoin-price",
     "pulseaudio",
@@ -20,9 +18,11 @@
     "memory",
     "disk",
     "sway/language",
-    "clock",
     "tray"
   ],
+  "wlr/workspaces": {
+    "format": "{name}"
+  },
   "keyboard-state": {
     "numlock": true,
     "capslock": true,
@@ -32,54 +32,17 @@
       "unlocked": ""
     }
   },
-  "sway/mode": {
-    "format": "<span style=\"italic\">{}</span>"
-  },
-  "mpd": {
-    "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-    "format-disconnected": "Disconnected ",
-    "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-    "unknown-tag": "N/A",
-    "interval": 2,
-    "consume-icons": {
-      "on": " "
-    },
-    "random-icons": {
-      "off": "<span color=\"#f53c3c\"></span> ",
-      "on": " "
-    },
-    "repeat-icons": {
-      "on": " "
-    },
-    "single-icons": {
-      "on": "1 "
-    },
-    "state-icons": {
-      "paused": "",
-      "playing": ""
-    },
-    "tooltip-format": "MPD (connected)",
-    "tooltip-format-disconnected": "MPD (disconnected)"
-  },
-  "idle_inhibitor": {
-    "format": "{icon}",
-    "format-icons": {
-      "activated": "",
-      "deactivated": ""
-    }
-  },
   "tray": {
-    // "icon-size": 21,
     "spacing": 10
   },
   "clock": {
-    "format": "{:%Y-%m-%d %H:%M:%S}",
+    "format": " {:%b %d   %H:%M:%S}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "format-alt": "{:%Y-%m-%d}",
+    "format-alt": "{:%Y-%m-%d %H:%M:%S}",
     "interval": 1
   },
   "cpu": {
-    "format": " CPU {usage}%",
+    "format": " {usage}%",
     "tooltip": false,
     "interval": 5
   },
@@ -88,58 +51,19 @@
     "interval": 5
   },
   "disk": {
-    "format": " {}%",
+    "format": " {free}",
   },
   "temperature": {
-    // "thermal-zone": 2,
     "hwmon-path": "/sys/class/drm/card0/device/hwmon/hwmon2/temp1_input",
-    "critical-threshold": 80,
+    "critical-threshold": 75,
     "format-critical": " {temperatureC}°C",
     "format": " {temperatureC}°C",
-    "format-icons": [
-      "",
-      "",
-      ""
-    ]
-  },
-  "backlight": {
-    // "device": "acpi_video1",
-    "format": "{percent}% {icon}",
-    "format-icons": [
-      "",
-      ""
-    ]
-  },
-  "battery": {
-    "states": {
-      // "good": 95,
-      "warning": 30,
-      "critical": 15
-    },
-    "format": "{capacity}% {icon}",
-    "format-charging": "{capacity}% ",
-    "format-plugged": "{capacity}% ",
-    "format-alt": "{time} {icon}",
-    // "format-good": "", // An empty format will hide the module
-    // "format-full": "",
-    "format-icons": [
-      "",
-      "",
-      "",
-      "",
-      ""
-    ]
-  },
-  "battery#bat2": {
-    "bat": "BAT2"
   },
   "network": {
-    // "interface": "wlp2*", // (Optional) To force the use of this interface
-    // "format-wifi": "{essid} ({signalStrength}%) ",
-    "format-wifi": "Connected ",
-    "format-ethernet": "Connected ",
+    "format-wifi": "",
+    "format-ethernet": "",
     "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "Disconnected ",
+    "format-disconnected": "",
     "format-alt": "{ifname}: {ipaddr}/{cidr}"
   },
   "pulseaudio": {
@@ -148,47 +72,25 @@
     "format-bluetooth": "{volume}% {icon} {format_source}",
     "format-bluetooth-muted": " {icon} {format_source}",
     "format-muted": " {format_source}",
-    /* "format-source": "{volume}% ", */
     "format-source": "",
     "format-source-muted": "",
-    "format-icons": {
-      "headphone": "",
-      "hands-free": "",
-      "headset": "",
-      "phone": "",
-      "portable": "",
-      "car": "",
-      "default": [
-        "",
-        "",
-        ""
-      ]
-    },
     "on-click": "pavucontrol"
-  },
-  "custom/media": {
-    "format": "{icon} {}",
-    "return-type": "json",
-    "max-length": 40,
-    "format-icons": {
-      "spotify": "",
-      "default": "🎜"
-    },
-    "escape": true,
-    "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-    // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
   },
   "custom/gpu": {
     "interval": 1,
     "exec": "~/.config/waybar/modules/get_gpu_usage.sh",
-    "format": "GPU {}%"
+    "format": " {}%"
   },
   "custom/bitcoin-price": {
     "interval": 10,
     "exec": "~/.config/waybar/modules/bitcoin_price.sh",
-    "format": " ${}"
+    "format": " ${}"
   },
   "custom/separator": {
     "format": "|"
+  },
+  "custom/icon": {
+    "format": "",
+    "on-click": "wofi"
   }
 }
