--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,4 +2,5 @@ include themes/macchiato.conf
 
 font_family Fira Mono Bold
 background_opacity 0.95
-cursor_shape beam
+shell_integration no-cursor
+window_padding_width 3.0
