--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 include themes/macchiato.conf
 
+allow_remote_control yes
+shell_integration no-cursor
+
 font_family Fira Mono Bold
 background_opacity 0.95
-shell_integration no-cursor
 window_padding_width 3.0
