--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -23,6 +23,19 @@
   "wlr/workspaces": {
     "format": "{name}"
   },
+  "sway/workspaces": {
+    "format": "{icon}",
+    "format-icons": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "6": "",
+      "focused": "",
+      "default": ""
+    }
+  },
   "keyboard-state": {
     "numlock": true,
     "capslock": true,
