--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -9,7 +9,7 @@
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 import:
-  - ~/.config/alacritty/themes/dracula.yml
+  - ~/.config/alacritty/themes/catppuccin.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
@@ -45,9 +45,9 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  #padding:
-  #  x: 0
-  #  y: 0
+  padding:
+    x: 8
+    y: 6
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
