--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,7 +1,6 @@
 {
   //"height": 0, // Waybar height (to be removed for auto height)
   // "width": 1900,
-  "margin": "0 5 0 5",
   "wlr/workspaces": {
     "format": "{name}"
   },
@@ -119,6 +118,6 @@
     "tooltip": false
   },
   "include": [
-    "~/.config/waybar/laptop_layout.jsonc"
+    "~/.config/waybar/pc_layout.jsonc"
   ]
 }
