--- a/.config/waybar/pc_layout.jsonc
+++ b/.config/waybar/pc_layout.jsonc
@@ -1,13 +1,9 @@
 {
-  "modules-left": [
-    "custom/icon",
-    "sway/workspaces"
-  ],
-  "modules-center": [
-    "clock"
-  ],
+  "modules-left": ["custom/icon", "sway/workspaces"],
+  "modules-center": ["clock"],
   "modules-right": [
     "custom/bitcoin-price",
+    "custom/break",
     "pulseaudio",
     "network",
     "cpu",
