Add config for windows in sway.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -2,5 +2,6 @@ include /etc/sway/config.d/*
 include variables
 include themes/macchiato
 include keybindings
+include windows
 include io
 include autostart
