Format waybar config.

--- a/.config/waybar/laptop_layout.jsonc
+++ b/.config/waybar/laptop_layout.jsonc
@@ -1,6 +1,11 @@
 {
-  "modules-left": ["custom/icon", "sway/workspaces"],
-  "modules-center": ["clock"],
+  "modules-left": [
+    "custom/icon",
+    "sway/workspaces"
+  ],
+  "modules-center": [
+    "clock"
+  ],
   "modules-right": [
     "custom/bitcoin-price",
     "custom/break",
