Add Rose Pine Dawn them.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,6 +1,7 @@
 include /etc/sway/config.d/*
 include variables
-include themes/macchiato
+include theme
+include colorschemes/rose-pine-dawn
 include keybindings
 include windows
 include io
