--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -53,6 +53,7 @@
   },
   "network": {
     "format-wifi": "",
+    "tooltip-format-wifi": "{essid}",
     "format-ethernet": "",
     "format-linked": "{ifname} (No IP) ",
     "format-disconnected": "",
