Add keymappings for prev, next, play/pause song keys in xremap config.

--- a/.config/xremap/config.yml
+++ b/.config/xremap/config.yml
@@ -10,3 +10,6 @@ keymap:
       CapsLock-o: End
       CapsLock-apostrophe: Delete
       CapsLock-p: Print
+      CapsLock-q: PreviousSong
+      CapsLock-w: PlayPause
+      CapsLock-e: NextSong
