--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,12 +1,33 @@
-# Fix colors for terminal. I have tested only with alacritty on MacOS
+# Fix colors for terminal. Tested only with alacritty on MacOS
 set -sg terminal-overrides ",*:RGB"
 
 set -g mouse on
 
 # Set prefix
-set -g prefix C-Space
-unbind-key C-b
-bind-key C-Space send-prefix
+# set -g prefix C-Space
+# unbind-key C-b
+# bind-key C-Space send-prefix
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Open split in the current working directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# Vim style selection in copy mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Plugins
 set -g @plugin 'catppuccin/tmux'
