--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,6 +14,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Move up and zoom
+bind K select-pane -U \; resize-pan -Z
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
